grid-gap changed to constant to avoid overflow

--- a/client/src/views/Event/components/ComponentContainer/ComponentContainer.css
+++ b/client/src/views/Event/components/ComponentContainer/ComponentContainer.css
@@ -8,7 +8,7 @@
     padding: 10px 0px 10px 0px;
     display: grid;
     grid-template-columns: auto auto;
-    grid-gap: 2%;
+    grid-gap: 10px;
     justify-content:center;
 }
 
